creating, updating, deleting message works
